--- a/ToDo/Views/Home/Index.cshtml
+++ b/ToDo/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ToDo.Models.HomeModel
+﻿@model ToDo.Models.ToDoModel
 @{
     ViewBag.Title = "Home Page";
 }
@@ -8,12 +8,18 @@
 </div>
 
 <div class="row">
-            @for(int i = 0; i < Model.TdList.Count; i++)
-            {
+    @using (Html.BeginForm("Index", "Home", FormMethod.Post))
+    {
+        foreach (var item in Model.TaskList)
+        {
             <div class="row td-row">
-                <div class="col-md-3 item-title">@Model.TdList[i].Title</div>
-                <div class="col-md-8 item-desc">@Model.TdList[i].Description</div>
-                <div class="col-md-1">@Html.CheckBoxFor(m => m.TdList[i].Completed)</div>
+                <div class="col-md-3 item-title">@item.Value.Title</div>
+                <div class="col-md-7 item-desc">@item.Value.Description</div>
+                <div class="col-md-1">@item.Value.Status</div>
+                <div class="col-md-1"><input class="button" type="submit" value="Update" name="@item.Value.ID" /></div>
             </div>
-            }
+        }
+        
+    }
+
 </div>
